Added new features to the Harden System Security App
* Added extra removal strategy for tattooed policy `EnableSvchostMitigationPolicy` in the Miscellaneous Category.

* Added extra removal strategy for tattooed policy `LongPathsEnabled` in the Miscellaneous Category.

* Added TLS Sub-Category for Battle.net game client to the Protect page.

* Added Miscellaneous Sub-Category for reduced telemetry in the OS to the Protect page.

* Added a new policy to the BitLocker category: **Allow network connectivity during connected-modern-standby (only when plugged in)**. Keeps the Operation System and Microsoft Defender up to date while the device Modern Standby capable and is plugged in (meaning it's not on battery).

--- a/Harden System Security/Strings/en-US/Resources.resw
+++ b/Harden System Security/Strings/en-US/Resources.resw
@@ -3709,4 +3709,19 @@ Thumbprint: {3}</value>
   <data name="VerifyingAllSecurityMeasuresSuccessful" xml:space="preserve">
     <value>Successfully verified all of the security measures.</value>
   </data>
+  <!--NEW-->
+  <data name="ProtectSubCategory_TLS_ForBattleNet" xml:space="preserve">
+    <comment>Protection Sub-Category</comment>
+    <value>Keep an insecure Cipher Suite required for Battle.net game client Internet connectivity enabled.</value>
+  </data>
+  <data name="TLSSecurity_TLS_ForBattleNet" xml:space="preserve">
+    <value>Only select this if you actually use the Battle.net Game client.</value>
+  </data>
+  <data name="ProtectSubCategory_MiscellaneousConfigurations_ReducedTelemetry" xml:space="preserve">
+    <comment>Protection Sub-Category</comment>
+    <value>Apply policies that reduce telemetry in the OS.</value>
+  </data>
+  <data name="MiscellaneousConfigurations_MiscellaneousConfigurations_ReducedTelemetry" xml:space="preserve">
+    <value>Some OS features will become unavailable.</value>
+  </data>
 </root>
