Updated release notes and version bump
Updated release notes and version bump

--- a/AppControl Manager/ReleaseNotes.txt
+++ b/AppControl Manager/ReleaseNotes.txt
@@ -1,7 +1,3 @@
-✅ Removed 2 dependencies, "CommunityToolkit.WinUI.Behaviors" and "Microsoft.Xaml.Behaviors.WinUI.Managed". The result is reduced package size by ~150 KB for the app bundle and improved overall performance since the new codes are more targeted and optimized. This project always strives for leaner and more efficient codebases and less dependency usage.
+✅ Added "Downloads Defense Measures" policy type to AppControl Manager - Create Policy Page.
 
-✅ The View File Certificates page now supports drag and drop when the app is running unelevated. Simply drag and drop your files on the page to view their certificates.
-
-✅ Updated Dependencies to the latest versions.
-
-✅ Completely changed the design of the Home page, it's more beautiful, compatible with dark and light themes, and displays more information.
+✅ Added "Dangerous Script Hosts Blocking" policy type to AppControl Manager - Create Policy Page.
